--- a/Jour02/Job04/tableau.html
+++ b/Jour02/Job04/tableau.html
@@ -2,8 +2,40 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Affichage des arguments POST</title>
+    <title>Tableau des paramètres POST</title>
     <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 <body>
+
+<h2>Tableau des paramètres POST</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th>Paramètres</th>
+            <th>Valeur</th>
+        </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table>
+
+</body>
+</html>
